--- a/HTML/AdminCMS.html
+++ b/HTML/AdminCMS.html
@@ -25,6 +25,27 @@
     <div class="container-fluid">
         <div class="row flex-nowrap">
 
+            
+            <!-- modal for change password -->
+            <div class="modal " id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Confirm delete</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div>
+                            <p>Are you sure you want to delete this term?</p>
+                        </div>
+                        <div class="modal-footer d-flex justify-content-center gap-2">
+                            <button type="button" class="btn cancel" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn changepass" data-bs-dismiss="modal"
+                                aria-label="Close">Delete</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- sidebar -->
             <div class="col-auto col-md-3 col-lg-3 col-xl-2 sidebar">
                 <div class="d-flex flex-column align-items-center align-items-sm-start pt-2 text-white min-vh-100">
@@ -53,31 +74,31 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminmissionTheme.html#" class="nav-link align-middle px-0">
                                 <i class="bi bi-columns-gap"></i> <span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Theme</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminmissionSkills.html#" class="nav-link align-middle px-0">
                                 <i class="bi bi-tools"></i><span class="ms-1 d-none d-sm-inline sidebarbuttons">Mission
                                     Skills</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminMissionApplication.html##" class="nav-link align-middle px-0">
                                 <i class="bi bi-folder-fill"></i><span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Application</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminStory.html#" class="nav-link align-middle px-0">
                                 <i class="bi bi-bookmark-star-fill"></i><span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Story</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminBanner.html#" class="nav-link align-middle px-0">
                                 <img src="images/folded-ribbon.png" alt=""> <span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Banner Management</span>
                             </a>
@@ -122,11 +143,12 @@
                 <!-- searchbar -->
                 <div class="d-flex justify-content-between">
                     <div class="searchBoxborder">
-                        <div class="searchboxh2"  id="searchboxing">
+                        <div class="searchboxh2" id="searchboxing">
                             <button class="w3-button ">
                                 <img src="images/search.png">
                             </button>
-                            <input type="text" placeholder=" Search missions..." id="searchboxing" name="search" class="searchBoxPh">
+                            <input type="text" placeholder=" Search missions..." id="searchboxing" name="search"
+                                class="searchBoxPh">
                         </div>
                     </div>
                     <button class="addbutton d-flex align-items-center"><i class="bi bi-plus"></i>ADD</button>
@@ -145,20 +167,23 @@
                         <tr>
                             <td>Arthaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
                             <td>Rudani</td>
-                            <td class="d-flex gap-3"><button class="d-flex ju"><img src="images/editing.png"
-                                        alt=""></button><button><img src="images/delete.png" alt=""></button></td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button data-bs-toggle="modal"
+                                        data-bs-target="#exampleModal1"><img
+                                        src="images/delete.png" ></button></td>
                         </tr>
                         <tr>
                             <td>Arth</td>
                             <td>Rudani</td>
-                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
-                                        src="images/delete.png" alt=""></button></td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button data-bs-toggle="modal"
+                                data-bs-target="#exampleModal1"><img
+                                src="images/delete.png" ></button></td>
                         </tr>
                         <tr>
                             <td>Arth</td>
                             <td>Rudani</td>
-                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
-                                        src="images/delete.png" alt=""></button></td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button data-bs-toggle="modal"
+                                data-bs-target="#exampleModal1"><img
+                                src="images/delete.png" ></button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -182,9 +207,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
-        <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/rowreorder/1.3.2/js/dataTables.rowReorder.min.js"></script>
-        <script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/rowreorder/1.3.2/js/dataTables.rowReorder.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
     <script>
         $(document).ready(function () {
             var table = $('#example1').DataTable({
