--- a/HTML/AdminCMSEdit.html
+++ b/HTML/AdminCMSEdit.html
@@ -8,24 +8,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
-    <title>Admin User</title>
+    <title>Admin Cms</title>
     <link rel="stylesheet" href="CSS/Admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="icon" href="" type="images/x-icon">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/rowreorder/1.3.2/css/rowReorder.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row flex-nowrap">
-
 
             <!-- sidebar -->
             <div class="col-auto col-md-3 col-lg-3 col-xl-2 sidebar">
@@ -55,31 +54,31 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://127.0.0.1:5500/AdminmissionTheme.html#" class="nav-link align-middle px-0">
+                            <a href="#" class="nav-link align-middle px-0">
                                 <i class="bi bi-columns-gap"></i> <span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Theme</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://127.0.0.1:5500/AdminmissionSkills.html#" class="nav-link align-middle px-0">
+                            <a href="#" class="nav-link align-middle px-0">
                                 <i class="bi bi-tools"></i><span class="ms-1 d-none d-sm-inline sidebarbuttons">Mission
                                     Skills</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://127.0.0.1:5500/AdminMissionApplication.html##" class="nav-link align-middle px-0">
+                            <a href="#" class="nav-link align-middle px-0">
                                 <i class="bi bi-folder-fill"></i><span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Application</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://127.0.0.1:5500/AdminStory.html#" class="nav-link align-middle px-0">
+                            <a href="#" class="nav-link align-middle px-0">
                                 <i class="bi bi-bookmark-star-fill"></i><span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Story</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://127.0.0.1:5500/AdminBanner.html#" class="nav-link align-middle px-0">
+                            <a href="#" class="nav-link align-middle px-0">
                                 <img src="images/folded-ribbon.png" alt=""> <span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Banner Management</span>
                             </a>
@@ -92,7 +91,6 @@
 
             <!-- main content -->
             <div class="col py-3">
-
                 <div class="headerbar d-flex justify-content-between">
                     <div class="d-flex align-items-center">Thursday november 3, 2022, 10:06 AM</div>
                     <div class="d-flex justify-content-between align-items-center ">
@@ -117,71 +115,33 @@
                 </div>
                 <div class="headerborder"></div>
 
-                <div class="EPbasicInfo">
-                    <p> User</p>
-                </div>
-                <div class="userborder"></div>
-
-                <!-- searchbar -->
-                <div class="d-flex justify-content-between">
-                    <div class="searchBoxborder">
-                        <div class="searchboxh2">
-                            <button class="w3-button ">
-                                <img src="images/search.png">
-                            </button>
-                            <input type="text" placeholder=" Search missions..." id="searchboxing" name="search"
-                                class="searchBoxPh" id="example_filter">
-                        </div>
+                <div class="EPbasicInfo addbox">
+                    <div class="addtext">
+                        <p class="mt-2 ms-3">Edit</p>
                     </div>
-                    <button class="addbutton d-flex align-items-center"><i class="bi bi-plus"></i>ADD</button>
+                    <div class="ms-3 mt-3 titleOfAddbox">
+                        Title
+                    </div>
+                    <input type="text" name="title" class="ms-3 mt-2 titlebox">
+
+                    <div class="ms-3 mt-3 titleOfAddbox">
+                        Description
+                    </div>
+                    <div id="editor" class="w-100"></div>
+
+                    <div class="ms-3 mt-3 titleOfAddbox">
+                        Slug
+                    </div>
+                    <input type="text" name="slug" class="ms-3 mt-2 titlebox">
+
+                    <div class="ms-3 mt-3 titleOfAddbox">
+                        Status
+                    </div>
+                    <input type="text" name="status" class="ms-3 mt-2 titlebox" style="margin-bottom: 15px;">
                 </div>
 
-                <!-- table -->
-                <table id="example" class="display mt-4">
-                    <thead>
-                        <tr>
-                            <th>First name</th>
-                            <th>Last name</th>
-                            <th>Email</th>
-                            <th>Employee id</th>
-                            <th>Department</th>
-                            <th>Status</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Arth</td>
-                            <td>Rudani</td>
-                            <td>arthrudani200q@gmail.com</td>
-                            <td>004</td>
-                            <td>Java</td>
-                            <td>Active</td>
-                            <td class="d-flex gap-3"><button class="d-flex ju"><img src="images/editing.png"
-                                        alt=""></button><button><img src="images/delete.png" alt="" ></button></td>
-                        </tr>
-                        <tr>
-                            <td>Arth</td>
-                            <td>Rudani</td>
-                            <td>arthrudani200q@gmail.com</td>
-                            <td>004</td>
-                            <td>Java</td>
-                            <td>Active</td>
-                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
-                                        src="images/delete.png" alt=""></button></td>
-                        </tr>
-                        <tr>
-                            <td>Arth</td>
-                            <td>Rudani</td>
-                            <td>arthrudani200q@gmail.com</td>
-                            <td>004</td>
-                            <td>Java</td>
-                            <td>Active</td>
-                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
-                                        src="images/delete.png" alt=""></button></td>
-                        </tr>
-                    </tbody>
-                </table>
+
+
 
             </div>
         </div>
@@ -206,7 +166,7 @@
     <script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
     <script>
         $(document).ready(function () {
-            var table = $('#example').DataTable({
+            var table = $('#example1').DataTable({
                 rowReorder: {
                     selector: 'td:nth-child(2)'
                 },
@@ -216,6 +176,16 @@
                 table.search(this.value).draw();
             });
         });
+    </script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#editor'))
+            .then(editor => {
+                console.log(editor);
+            })
+            .catch(error => {
+                console.error(error);
+            });
     </script>
 
     <script src="js/EditProfile.js"></script>
