--- a/HTML/AdminMission.html
+++ b/HTML/AdminMission.html
@@ -53,31 +53,31 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminmissionTheme.html#" class="nav-link align-middle px-0">
                                 <i class="bi bi-columns-gap"></i> <span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Theme</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminmissionSkills.html#" class="nav-link align-middle px-0">
                                 <i class="bi bi-tools"></i><span class="ms-1 d-none d-sm-inline sidebarbuttons">Mission
                                     Skills</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminMissionApplication.html##" class="nav-link align-middle px-0">
                                 <i class="bi bi-folder-fill"></i><span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Application</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminStory.html#" class="nav-link align-middle px-0">
                                 <i class="bi bi-bookmark-star-fill"></i><span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Story</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link align-middle px-0">
+                            <a href="http://127.0.0.1:5500/AdminBanner.html#" class="nav-link align-middle px-0">
                                 <img src="images/folded-ribbon.png" alt=""> <span
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Banner Management</span>
                             </a>
@@ -269,8 +269,6 @@
 
                     </tbody>
                 </table>
-
-
 
             </div>
         </div>
