completed front end

--- a/HTML/AdminUser.html
+++ b/HTML/AdminUser.html
@@ -36,10 +36,10 @@
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
                         id="menu">
 
-                        <li class="nav-item">
+                        <li class="nav-item  activepage">
                             <a href="http://127.0.0.1:5500/Adminuser.html" class="nav-link align-middle px-0">
-                                <i class="bi bi-person-fill"></i><span
-                                    class="ms-1 d-none d-sm-inline sidebarbuttons">User</span>
+                                <i class="bi bi-person-fill" style="color: #F88634;"></i><span
+                                    class="ms-1 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">User</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -137,7 +137,7 @@
                 </div>
 
                 <!-- table -->
-                <table id="example" class="display mt-4">
+                <table id="example" class="display mt-4" style="width: 100%;"> 
                     <thead>
                         <tr>
                             <th>First name</th>
