--- a/HTML/AdminCMS.html
+++ b/HTML/AdminCMS.html
@@ -61,10 +61,10 @@
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">User</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item activepage">
                             <a href="http://127.0.0.1:5500/AdminCMS.html" class="nav-link align-middle px-0">
-                                <i class="bi bi-file-earmark-medical-fill"></i><span
-                                    class="ms-2 d-none d-sm-inline sidebarbuttons">CMS Page</span>
+                                <i class="bi bi-file-earmark-medical-fill" style="color: #F88634;"></i><span
+                                    class="ms-2 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">CMS Page</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -155,7 +155,7 @@
                 </div>
 
                 <!-- table -->
-                <table id="example1" class="display mt-4" style="width:100%">
+                <table id="example" class="display mt-4" style="width:100%">
                     <thead>
                         <tr>
                             <th>Title</th>
@@ -165,7 +165,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Arthaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+                            <td>Arth</td>
                             <td>Rudani</td>
                             <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button data-bs-toggle="modal"
                                         data-bs-target="#exampleModal1"><img
@@ -187,7 +187,6 @@
                         </tr>
                     </tbody>
                 </table>
-
 
             </div>
         </div>
@@ -212,7 +211,7 @@
     <script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
     <script>
         $(document).ready(function () {
-            var table = $('#example1').DataTable({
+            var table = $('#example').DataTable({
                 rowReorder: {
                     selector: 'td:nth-child(2)'
                 },
