--- a/HTML/AdminCMSEdit.html
+++ b/HTML/AdminCMSEdit.html
@@ -41,10 +41,10 @@
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">User</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item  activepage">
                             <a href="http://127.0.0.1:5500/AdminCMS.html" class="nav-link align-middle px-0">
-                                <i class="bi bi-file-earmark-medical-fill"></i><span
-                                    class="ms-2 d-none d-sm-inline sidebarbuttons">CMS Page</span>
+                                <i class="bi bi-file-earmark-medical-fill" style="color: #F88634;"></i><span
+                                    class="ms-2 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">CMS Page</span>
                             </a>
                         </li>
                         <li class="nav-item">
