--- a/HTML/AdminMission.html
+++ b/HTML/AdminMission.html
@@ -46,10 +46,10 @@
                                     class="ms-2 d-none d-sm-inline sidebarbuttons">CMS Page</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item  activepage">
                             <a href="http://127.0.0.1:5500/Adminmission.html#" class="nav-link align-middle px-0">
-                                <i class="bi bi-bullseye"></i><span
-                                    class="ms-1 d-none d-sm-inline sidebarbuttons">Mission</span>
+                                <i class="bi bi-bullseye" style="color: #F88634;"></i><span
+                                    class="ms-1 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">Mission</span>
                             </a>
                         </li>
                         <li class="nav-item">
