--- a/HTML/AdminMissionTheme.html
+++ b/HTML/AdminMissionTheme.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
-    <title>Admin mission application</title>
+    <title>Admin Mission Theme</title>
     <link rel="stylesheet" href="CSS/Admin.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="icon" href="" type="images/x-icon">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/rowreorder/1.3.2/css/rowReorder.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/rowreorder/1.3.2/css/rowReorder.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.dataTables.min.css">
 </head>
 
 <body>
@@ -46,10 +46,10 @@
                                     class="ms-2 d-none d-sm-inline sidebarbuttons">CMS Page</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item  activepage">
                             <a href="http://127.0.0.1:5500/Adminmission.html#" class="nav-link align-middle px-0">
-                                <i class="bi bi-bullseye"></i><span
-                                    class="ms-1 d-none d-sm-inline sidebarbuttons">Mission</span>
+                                <i class="bi bi-bullseye" style="color: #F88634;"></i><span
+                                    class="ms-1 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">Mission</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -64,10 +64,10 @@
                                     Skills</span>
                             </a>
                         </li>
-                        <li class="nav-item  activepage">
+                        <li class="nav-item">
                             <a href="http://127.0.0.1:5500/AdminMissionApplication.html##" class="nav-link align-middle px-0">
-                                <i class="bi bi-folder-fill" style="color: #F88634;"></i><span
-                                    class="ms-1 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">Mission Application</span>
+                                <i class="bi bi-folder-fill"></i><span
+                                    class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Application</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -115,18 +115,18 @@
                 <div class="headerborder"></div>
 
                 <div class="EPbasicInfo">
-                    <p>Mission application</p>
+                    <p>MIssion Theme</p>
                 </div>
                 <div class="userborder"></div>
 
                 <!-- searchbar -->
                 <div class="d-flex justify-content-between">
                     <div class="searchBoxborder">
-                        <div class="searchboxh2" id="searchboxing">
-                            <button class="w3-button ">
+                        <div class="searchboxh2">
+                            <button class="w3-button">
                                 <img src="images/search.png">
                             </button>
-                            <input type="text" placeholder=" Search missions..." id="searchboxing" name="search"
+                            <input type="search" placeholder=" Search missions..." id="searchboxing" name="search"
                                 class="searchBoxPh">
                         </div>
                     </div>
@@ -137,70 +137,71 @@
                 <table id="example" class="display mt-4" style="width:100%">
                     <thead>
                         <tr>
-                            <th>Mission Title</th>
                             <th>Mission Id</th>
-                            <th>User Id</th>
-                            <th>User name</th>
-                            <th>Applied date</th>
+                            <th>Mission type</th>
+                            <th>Mission skill</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>tatvasoft</td>
-                            <td>004</td>
-                            <td>@arth._.rudani</td>
-                            <td>Arth Rudani</td>
-                            <td>00-00-0000</td>
-                            <td class="d-flex gap-3">
-                                <button class="view">View</button>
-                                <button class="checkbs"><i class="bi bi-check-circle"></i></button>
-                                <button class="circlebs"><i class="bi bi-x-circle"></i></button>
-                            </td>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
+                        </tr>
+
+                        <tr>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
                         </tr>
                         <tr>
-                            <td>tatvasoft</td>
-                            <td>004</td>
-                            <td>@arth._.rudani</td>
-                            <td>Arth Rudani</td>
-                            <td>00-00-0000</td>
-                            <td class="d-flex gap-3">
-                                <button class="view">View</button>
-                                <button class="checkbs"><i class="bi bi-check-circle"></i></button>
-                                <button class="circlebs"><i class="bi bi-x-circle"></i></button>
-                            </td>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
                         </tr>
                         <tr>
-                            <td>tatvasoft</td>
-                            <td>004</td>
-                            <td>@arth._.rudani</td>
-                            <td>Arth Rudani</td>
-                            <td>00-00-0000</td>
-                            <td class="d-flex gap-3">
-                                <button class="view">View</button>
-                                <button class="checkbs"><i class="bi bi-check-circle"></i></button>
-                                <button class="circlebs"><i class="bi bi-x-circle"></i></button>
-                            </td>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
                         </tr>
                         <tr>
-                            <td>tatvasoft</td>
-                            <td>004</td>
-                            <td>@arth._.rudani</td>
-                            <td>Arth Rudani</td>
-                            <td>00-00-0000</td>
-                            <td class="d-flex gap-3">
-                                <button class="view">View</button>
-                                <button class="checkbs"><i class="bi bi-check-circle"></i></button>
-                                <button class="circlebs"><i class="bi bi-x-circle"></i></button>
-                            </td>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
                         </tr>
+                        <tr>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
+                        </tr>
+                        <tr>
+                            <td>003</td>
+                            <td>Rain</td>
+                            <td>Farming</td>
+                            <td class="d-flex gap-3"><button><img src="images/editing.png" alt=""></button><button><img
+                                        src="images/delete.png" alt=""></button></td>
+                        </tr>
+
                     </tbody>
                 </table>
-
 
             </div>
         </div>
     </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -216,6 +217,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/rowreorder/1.3.2/js/dataTables.rowReorder.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
