--- a/HTML/AdminStory.html
+++ b/HTML/AdminStory.html
@@ -91,10 +91,10 @@
                                     class="ms-1 d-none d-sm-inline sidebarbuttons">Mission Application</span>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item activepage">
                             <a href="http://127.0.0.1:5500/AdminStory.html#" class="nav-link align-middle px-0">
-                                <i class="bi bi-bookmark-star-fill"></i><span
-                                    class="ms-1 d-none d-sm-inline sidebarbuttons">Story</span>
+                                <i class="bi bi-bookmark-star-fill" style="color: #F88634;"></i><span
+                                    class="ms-1 d-none d-sm-inline sidebarbuttons" style="color: #F88634;">Story</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -155,7 +155,7 @@
                 </div>
 
                 <!-- table -->
-                <table id="example1" class="display mt-4" style="width:100%">
+                <table id="example" class="display mt-4" style="width: 100%;">
                     <thead>
                         <tr>
                             <th>Story Title</th>
@@ -236,7 +236,7 @@
     <script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
     <script>
         $(document).ready(function () {
-            var table = $('#example1').DataTable({
+            var table = $('#example').DataTable({
                 rowReorder: {
                     selector: 'td:nth-child(2)'
                 },
@@ -247,9 +247,6 @@
             });
         });
     </script>
-
-    <script src="js/EditProfile.js"></script>
-    <script src="js/home.js"></script>
 </body>
 
 </html>
