--- a/HTML/Registration.html
+++ b/HTML/Registration.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous"></script>
     <link rel="icon" href="" type="images/x-icon">
     <link rel="stylesheet" href="CSS/Registration.css">
+    <script src="js/home.js"></script>
 </head>
 
 
@@ -90,7 +91,7 @@
                     <div class="row"></div>
                     <div class="row">
                         <div class="myform">
-                            <form action="formhandler" method="post" name="login">
+                            <form action="formhandler" method="post" name="login" onsubmit="return verifyPassword()">
                                 <div class="form-group">
                                     <label for="exampleInputEmail1" class="first"
                                         style="font-size: 0.6rem; color: #8d8a8a; padding-left: 15%; padding-bottom: -1%;">First
@@ -130,7 +131,7 @@
                                     <label for="exampleInputEmail1"
                                         style="font-size: 0.6rem; color: #8d8a8a; padding-left: 15%; padding-bottom: -1%;">Confirm
                                         Password</label>
-                                    <input type="password" name="password" id="password" class="form-control"
+                                    <input type="password" name="confpassword" id="confpassword" class="form-control"
                                         aria-describedby="emailHelp" placeholder="**************">
                                 </div>
                                 <div class="col-md-12 d-grid gap-2 text-center mt-4">
