--- a/HTML/HomeList.html
+++ b/HTML/HomeList.html
@@ -304,7 +304,9 @@
         
     </div>
 
-    <div class="container grid-container blocking">
+
+    <!-- main content -->
+    <div class="container grid-container">
         <div class="row">
             <div class="col-12 ">
                 <div class="card row">
