Completed filter part of country city and theme

--- a/HTML/StoryDetail.html
+++ b/HTML/StoryDetail.html
@@ -552,7 +552,7 @@
 </body>
 
 <script src="/js/bootstrap.min.js"></script>
-<script src="/js/missionview.js"></script>
+<!--<script src="/js/missionview.js"></script>-->
 
 <!-- slick-carousel -->
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"
